# overengineering-tictactoe

./: .gitignore  CLAUDE.md  INITIAL.md  LICENSE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  tic-tac-toe.log.json
.claude/commands/: speckit.extract.md
.github/workflows/: gradle-publish-github.yml  gradle-publish-maven.yml  gradle-publish.yml  gradle.yml
.specify/features/: FEATURE-INVENTORY.md
.specify/memory/: constitution.md
api/: build.gradle.kts
app/: build.gradle.kts
app/scripts/: 1_aot_record.sh  2_aot_create.sh  2a_aot_record_create_one_step.sh  3a_aot_run.sh  3b_aot_bench.sh  bench.sh  run.sh  run_lite.sh  run_lite_http.sh  serve.sh
buildSrc/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
lib/: INITIAL.md
lib/src/: build.gradle.kts
lib/tictactoe/: Cargo.toml
native/: build.gradle.kts
native/src/main/rust/: Cargo.toml  build.gradle.kts
native/src/main/rust/tictactoe/: lib.rs
scripts/: bench.sh
specs/: FEATURE-INVENTORY.md
specs/001-game-lifecycle/: spec.md
specs/002-game-board/: spec.md
specs/003-human-player-input/: spec.md
specs/004-bot-ai-strategies/: spec.md
specs/005-game-analysis/: spec.md
specs/006-game-commentary/: spec.md
specs/007-game-persistence/: spec.md
specs/008-networked-multiplayer/: spec.md
specs/009-secure-transport/: spec.md
specs/010-native-board-interop/: spec.md
specs/011-runtime-bot-generation/: spec.md
specs/012-game-metadata/: spec.md
specs/013-configurable-chain-length/: data-model.md  plan.md  spec.md  (+3 more)
tcp-gameserver/: build.gradle.kts
(+312 files in other folders)
